<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="appName">Brain4it Manager</string>
  <string name="servers">Servers</string>
  <string name="actions">Actions</string>
  <string name="console">Console</string>
  <string name="serverName">Server name</string>
  <string name="serverUrl">Server URL</string>
  <string name="module">Module</string>
  <string name="moduleName">Module name</string>
  <string name="accessKey">Access key</string>
  <string name="moduleAccessKey">Access key (leave blank to access with server key)</string>

  <string name="preferences">Preferences</string>
  <string name="language">Language</string>
  <string name="textSize">Editor text size</string>
  <string name="indentSize">Indent size</string>
  <string name="formatColumns">Columns to fit code</string>

  <string name="addServer">Add server</string>
  <string name="editServer">Edit server</string>
  <string name="removeServer">Remove server</string>
  <string name="sortServers">Sort servers</string>

  <string name="listModules">List modules</string>
  <string name="addModule">Add module</string>
  <string name="editModule">Edit module</string>
  <string name="createModule">Create module</string>
  <string name="removeModule">Remove module</string>
  <string name="destroyModule">Destroy module</string>
  <string name="importModule">Import module</string>

  <string name="showDashboard">Dashboard</string>
  <string name="showConsole">Console</string>
  <string name="showEditor">Editor</string>

  <string name="path">Path:</string>
  <string name="ok">Ok</string>
  <string name="modulesFound">%d modules found.</string>
  <string name="confirmDestroyModule">Do you really want to destroy the module %s?</string>
  <string name="confirmDiscardChanges">Discard changes?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="cancel">Cancel</string>
  <string name="imp">Import</string>

  <string name="update">Update</string>
  <string name="parenthesis">Parenthesis</string>
  <string name="quotes">Quotes</string>
  <string name="arrow">Arrow</string>
  <string name="complete">Complete</string>
  <string name="functions">Functions</string>
  <string name="clear">Clear</string>
  <string name="historyNext">History next</string>
  <string name="historyPrevious">History previous</string>
  <string name="execute">Execute</string>
  <string name="load">Load</string>
  <string name="save">Save</string>
  <string name="undo">Undo</string>
  <string name="redo">Redo</string>
  <string name="format">Format</string>

  <string name="enterUrl">Enter URL:</string>

  <string name="loadSuccessfull">Load successfull.</string>
  <string name="saveSuccessfull">Save successfull.</string>
  <string name="noDashboards">This module has no dashboards.</string>
  <string name="invalidDashboardFormat">Invalid dashboard format!</string>
  <string name="importCompleted">Import completed.</string>
  <string name="noMatches">No matches</string>
  <string name="serverNameMandatory">Server name is mandatory</string>
  <string name="moduleNameMandatory">Module name is mandatory</string>
  <string name="serverURLMandatory">URL is mandatory</string>
  <string name="invalidURL">Invalid URL</string>
  <string name="threadDumpGenerated">Thread dump generated:</string>

  <string name="threadDump">Thread dump</string>
  <string name="about">About</string>
</resources>
