<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top">
    <ImageButton
      android:id="@+id/parenthesis_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
     android:src="@drawable/parenthesis"
      android:contentDescription="@string/parenthesis" 
      android:layout_weight="0.125"/>
    <ImageButton
      android:id="@+id/arrow_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:src="@drawable/arrow"
      android:contentDescription="@string/arrow"
      android:layout_weight="0.125" />
    <ImageButton
      android:id="@+id/complete_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:src="@drawable/complete"
      android:contentDescription="@string/complete"
      android:layout_weight="0.125" />
    <ImageButton
      android:id="@+id/functions_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:src="@drawable/functions"
      android:contentDescription="@string/functions"
      android:layout_weight="0.125" />
    <ImageButton
      android:id="@+id/clear_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:src="@drawable/clear"
      android:contentDescription="@string/clear"
      android:layout_weight="0.125" />
    <ImageButton
      android:id="@+id/history_next_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:src="@drawable/down"
      android:contentDescription="@string/historyNext"
      android:layout_weight="0.125"/>
    <ImageButton
      android:id="@+id/history_previous_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:src="@drawable/up"
      android:contentDescription="@string/historyPrevious"
      android:layout_weight="0.125"/>
    <ImageButton
      android:id="@+id/execute_button"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:src="@drawable/execute"
      android:contentDescription="@string/execute"
      android:layout_weight="0.125"/>
  </LinearLayout>
  <org.brain4it.manager.android.view.CodeListView
    android:id="@+id/output"
    android:layout_width="match_parent" 
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="#ffffffff"
    android:textColor="#ff000000"
    android:focusable="true"
    android:scrollbars="vertical"
    android:scrollbarThumbVertical="@drawable/scrollbar"
    android:stackFromBottom="true"
    android:gravity="bottom" />
  <org.brain4it.manager.android.view.EditCode
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:scrollbarThumbVertical="@drawable/scrollbar"
    android:textCursorDrawable="@drawable/cursor"
    android:inputType="textMultiLine|textNoSuggestions"
    android:background="@drawable/console"
    android:textColor="#ff000000"
    android:fontFamily="monospace"
    android:textSize="15sp"
    android:paddingLeft="2dp"
    android:paddingRight="2dp"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:gravity="top|left"
    android:maxHeight="100dp" />
</LinearLayout>

