<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <TextView
    android:id="@+id/moduleNameLabel"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:text="@string/moduleName"  />
  <EditText 
    android:id="@+id/moduleNameInput"
    android:inputType="textNoSuggestions"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content" />
  <TextView
    android:id="@+id/accessKeyLabel"
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:text="@string/accessKey"  />
  <EditText 
    android:id="@+id/accessKeyInput"
    android:inputType="textNoSuggestions"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="wrap_content" />
  <Button
    android:id="@+id/moduleOkButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:text="@string/ok"/>
</LinearLayout>

